Closed Bug 1695139 Opened 5 years ago Closed 4 years ago

WARNING: Scrolled rect smaller than scrollport during debug version Thunderbird mochitest

Categories

(Core :: Layout: Scrolling and Overflow, defect)

x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
101 Branch
Tracking Status
firefox88 --- wontfix
firefox101 --- fixed

People

(Reporter: ishikawa, Assigned: emilio)

References

Details

Attachments

(3 files)

I get the following error during local mochitest testing of debug version of TB under linux.

WARNING: Scrolled rect smaller than scrollport?: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/layout/generic/nsGfxScrollFrame.cpp:7064

The line number is a bit off from the pristine tree due to my local patch to dump the rectangle size.

These are visible in other people's tryserver run of debug version.

See, for example, geoff's job on
Fri, Feb 26, 10:36:47
https://treeherder.mozilla.org/jobs?repo=try-comm-central&selectedTaskRun=UHH5kKDXQZajtn4GSyAkOQ.0&revision=f8aba0f45fa5b6f168f08143c272f630871ad4f8

You can find the warning in, say,
https://firefoxci.taskcluster-artifacts.net/UHH5kKDXQZajtn4GSyAkOQ/0/public/logs/live_backing.log

So this is not a local problem.

I am attaching the list of either the height or the width of the rectangle when the warning is printed.
That is produced by

egrep "result.(height|width)" log1297-mochitest.txt 

Please note that there are two places where the warning is printed.

Shorter height:
3021: Main Thread] WARNING: Scrolled rect smaller than scrollport?: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/layout/generic/nsGfxScrollFrame.cpp:7064
Original location is:
https://searchfox.org/comm-central/source/mozilla/layout/generic/nsGfxScrollFrame.cpp#7053

Shorter width:
197: Main Thread] WARNING: Scrolled rect smaller than scrollport?: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/layout/generic/nsGfxScrollFrame.cpp:7057
Original location is:
https://searchfox.org/comm-central/source/mozilla/layout/generic/nsGfxScrollFrame.cpp#7050

There are more warnings for shorter height than for shorter width. The number at the beginning of the warning is the # of appearances in the log.

The following is the list of NS_WARNING messages from the mochitest
log in the descending order of appearances. (JavaScript warnings are
not counted here.)

The relevant warnings are marked with "*" at the beginning the line.

     ========================================
     Other than /libeditor/
     ========================================

*3021: Main Thread] WARNING: Scrolled rect smaller than scrollport?: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/layout/generic/nsGfxScrollFrame.cpp:7064
 2183: Main Thread] WARNING: NS_ENSURE_TRUE(presShell) failed: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/dom/base/nsGlobalWindowOuter.cpp:4252
 1988: Main Thread] WARNING: Failed to retarget HTML data delivery to the parser thread.: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/parser/html/nsHtml5StreamParser.cpp:1298
 1660: Main Thread] WARNING: NS_ENSURE_TRUE(rootFrame) failed: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/dom/base/nsGlobalWindowOuter.cpp:4254
 1547: Main Thread] WARNING: '!aChild->IsContent()', file /NEW-SSD/moz-obj-dir/objdir-tb3/dist/include/mozilla/EditorDOMPoint.h:451
 1075: Main Thread] WARNING: '!ClientIsValidPrincipalInfo(mClientInfo.PrincipalInfo())', file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/dom/clients/manager/ClientSource.cpp:183
 933: Main Thread] WARNING: no request to cancel: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/comm/mailnews/base/src/nsMsgProtocol.cpp:756
 680: Main Thread] WARNING: NS_ENSURE_TRUE(uri) failed: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/caps/BasePrincipal.cpp:1327
 501: Main Thread] WARNING: '!mTextEditor', file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/extensions/spellcheck/src/mozInlineSpellChecker.cpp:663
 501: Main Thread] WARNING: '!mTextEditor', file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/extensions/spellcheck/src/mozInlineSpellChecker.cpp:1651
 437: Main Thread] WARNING: NS_ENSURE_TRUE(uri) failed: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/netwerk/base/nsIOService.cpp:1708
 437: Main Thread] WARNING: NS_ENSURE_TRUE(principal) failed: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/extensions/permissions/Permission.cpp:58
 437: Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80070057 (NS_ERROR_ILLEGAL_VALUE): file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/netwerk/base/nsIOService.cpp:1730
 437: Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, nullptr) failed with result 0x804B000A (NS_ERROR_MALFORMED_URI): file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/extensions/permissions/Permission.cpp:46
 437: Main Thread] WARNING: Failed to remove transaction listener from the editor: 'removedTransactionListener', file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/editor/composer/nsEditingSession.cpp:452
 385: Main Thread] WARNING: NS_ENSURE_TRUE(info) failed: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/extensions/permissions/PermissionDelegateHandler.cpp:348
 323: self.testRootAbs=/NEW-SSD/moz-obj-dir/objdir-tb3/_tests/testing/mochitest/browser
 322: Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005 (NS_ERROR_FAILURE): file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/dom/security/nsCSPService.cpp:191
 322: Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005 (NS_ERROR_FAILURE): file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/chrome/nsChromeRegistry.cpp:180
 319: Main Thread] WARNING: '!mIMContext', file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/widget/gtk/nsWindow.cpp:7456
 293: Main Thread] WARNING: NS_ENSURE_TRUE(name) failed: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/dom/base/nsDOMAttributeMap.cpp:301
 275: Main Thread] WARNING: NS_ENSURE_TRUE(root) failed: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/layout/base/nsDocumentViewer.cpp:2729
 254: Main Thread] WARNING: Ignoring duplicate observer.: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/modules/libpref/Preferences.cpp:2612
 246: Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80550006: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/comm/mailnews/local/src/nsMailboxService.cpp:630
 246: Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80550006: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/comm/mailnews/base/src/nsMsgDBFolder.cpp:4702
 242: Main Thread] WARNING: NS_ENSURE_TRUE(frame) failed: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/comm/mailnews/base/src/nsMsgWindow.cpp:78
 198: Main Thread] WARNING: NS_ENSURE_TRUE(Preferences::InitStaticMembers()) failed: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/modules/libpref/Preferences.cpp:4380
 198: Main Thread] WARNING: Extra shutdown CC: 'i < NORMAL_SHUTDOWN_COLLECTIONS', file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/xpcom/base/nsCycleCollector.cpp:3365
*197: Main Thread] WARNING: Scrolled rect smaller than scrollport?: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/layout/generic/nsGfxScrollFrame.cpp:7057
 178: Main Thread] WARNING: '!CanSend() || !mManager || !mManager->CanSend()', file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/dom/ipc/jsactor/JSWindowActorChild.cpp:40
 163: Main Thread] WARNING: nsITransaction::Merge() failed: 'NS_SUCCEEDED(rv)', file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/editor/txmgr/TransactionManager.cpp:762
 163: Main Thread] WARNING: The previous error was ignored: 'NS_SUCCEEDED(rv)', file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/editor/txmgr/TransactionManager.cpp:771
 130: Main Thread] WARNING: Wrong button set to eContextMenu event?: 'mMessage != eContextMenu || (mButton == ((mContextMenuTrigger == eNormal) ? MouseButton::eSecondary : MouseButton::ePrimary) && (mContextMenuTrigger != eControlClick || IsControl()))', file /NEW-SSD/moz-obj-dir/objdir-tb3/dist/include/mozilla/MouseEvents.h:238
 115: Main Thread] WARNING: 'aOwner->IsDiscarded()', file /NEW-SSD/moz-obj-dir/objdir-tb3/dist/include/mozilla/dom/SyncedContextInlines.h:92
 111: Main Thread] WARNING: NS_ENSURE_TRUE(identity) failed: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/comm/mailnews/base/src/nsMsgIncomingServer.cpp:1822
 110: Main Thread] WARNING: NS_ENSURE_TRUE(!mHasOrHasHadOwnerWindow || mOwnerWindow) failed: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/dom/events/DOMEventTargetHelper.cpp:327
 107: Main Thread] WARNING: Need BrowserChild to get the nativeWindow from!: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/widget/PuppetWidget.cpp:980
 107: Main Thread] WARNING: Fallback to BasicLayerManager: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/dom/ipc/BrowserChild.cpp:2697
 100: Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005 (NS_ERROR_FAILURE): file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/dom/base/nsContentUtils.cpp:3896

 ... warnings that don't appear more than 100 times are omitted.

From the attachment, you can see there ARE cases when the resulting width is 0.
This certainly sounds strange and can be the cause of various strange display errors.

Bug 562510 is for MacOS, and it looks to be FF-specific and very old.
I doubt it is related.

So I filed this separately.

This is the patch I used to dump the relevant values.

I think this could be dup.

Severity: -- → S4
Component: Layout → Layout: Scrolling and Overflow

https://bugzilla.mozilla.org/show_bug.cgi?id=810274
Bug 810274 seems to have inserted this check and explains the background in detail regarding sub-pixel scroll.
Now that we have a new drawing engine, maybe the situation could improve.

Anyway, more than 3K warnings during a test run seems a bit excessive, and one wonders naturally what goes on.

Summary: WARNING: Scrolled rect smaller than scrollport during debug version TB mochitest → WARNING: Scrolled rect smaller than scrollport during debug version Thunderbird mochitest

We still get more than a few thousand warnings in mochitest locally done under Debian GNU/Linux.

Warning that does not appear more than 100 times is omitted.

    Other than /libeditor/
    ========================================

2947: Main Thread] WARNING: Scrolled rect smaller than scrollport?: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/layout/generic/nsGfxScrollFrame.cpp:7154
2164: Main Thread] WARNING: NS_ENSURE_TRUE(rootFrame) failed: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/dom/base/nsGlobalWindowOuter.cpp:4147
2074: Main Thread] WARNING: Failed to retarget HTML data delivery to the parser thread.: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/parser/html/nsHtml5StreamParser.cpp:1198
1659: Main Thread] WARNING: XPCOM object nsStringBuffer released from static ctor/dtor: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/xpcom/base/nsTraceRefcnt.cpp:206
1564: Main Thread] WARNING: IPC message 'PIdleScheduler::Msg_DoneGC' discarded: actor cannot send: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/ipc/glue/ProtocolUtils.cpp:504
1563: Main Thread] WARNING: IPC message 'PIdleScheduler::Msg_StartedGC' discarded: actor cannot send: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/ipc/glue/ProtocolUtils.cpp:504
1402: Main Thread] WARNING: '!inner', file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/dom/ipc/jsactor/JSWindowActorProtocol.cpp:184
1168: Compositor] WARNING: Possibly dropping task posted to updater thread: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/gfx/layers/apz/src/APZUpdater.cpp:365
1076: Main Thread] WARNING: '!ClientIsValidPrincipalInfo(mClientInfo.PrincipalInfo())', file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/dom/clients/manager/ClientSource.cpp:183
1011: Main Thread] WARNING: no request to cancel: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/comm/mailnews/base/src/nsMsgProtocol.cpp:763
736: Main Thread] WARNING: Malformed header (expected 'name: value'): file /NEW-SSD/moz-obj-dir/objdir-tb3/dist/include/HeaderReader.h:264
719: Main Thread] WARNING: NS_ENSURE_TRUE(info) failed: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/extensions/permissions/PermissionDelegateHandler.cpp:348
680: Main Thread] WARNING: NS_ENSURE_TRUE(uri) failed: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/caps/BasePrincipal.cpp:1358
569: Main Thread] WARNING: Please do not use mouseenter/leave events in chrome. They are slower than mouseover/out!: '!nsContentUtils::IsChromeDoc(window->GetExtantDoc())', file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/dom/events/EventListenerManager.cpp:378
528: Main Thread] WARNING: NS_ENSURE_TRUE(presShell) failed: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/dom/base/nsGlobalWindowOuter.cpp:4145
526: Main Thread] WARNING: Ignoring duplicate observer.: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/modules/libpref/Preferences.cpp:2636
525: Main Thread] WARNING: '!mEditorBase', file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/extensions/spellcheck/src/mozInlineSpellChecker.cpp:728
525: Main Thread] WARNING: '!mEditorBase', file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/extensions/spellcheck/src/mozInlineSpellChecker.cpp:1889
521: Main Thread] WARNING: Failed to remove transaction listener from the editor: 'removedTransactionListener', file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/editor/composer/nsEditingSession.cpp:447
445: Main Thread] WARNING: NS_ENSURE_TRUE(uri) failed: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/netwerk/base/nsIOService.cpp:1742
445: Main Thread] WARNING: NS_ENSURE_TRUE(principal) failed: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/extensions/permissions/Permission.cpp:57
445: Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80070057 (NS_ERROR_ILLEGAL_VALUE): file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/netwerk/base/nsIOService.cpp:1764
445: Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, nullptr) failed with result 0x804B000A (NS_ERROR_MALFORMED_URI): file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/extensions/permissions/Permission.cpp:45
437: Main Thread] WARNING: NS_ENSURE_TRUE(Preferences::InitStaticMembers()) failed: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/modules/libpref/Preferences.cpp:4465
437: Main Thread] WARNING: NS_ENSURE_TRUE(InitStaticMembers()) failed: file /NEW-SSD/moz-obj-dir/objdir-tb3/dist/include/mozilla/Preferences.h:128
437: Main Thread] WARNING: Extra shutdown CC: 'i < NORMAL_SHUTDOWN_COLLECTIONS', file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/xpcom/base/nsCycleCollector.cpp:3359
415: Main Thread] WARNING: '!mIMContext', file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/widget/gtk/nsWindow.cpp:8213
396: Main Thread] WARNING: NS_ENSURE_TRUE(name) failed: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/dom/base/nsDOMAttributeMap.cpp:301
371: self.testRootAbs=/NEW-SSD/moz-obj-dir/objdir-tb3/_tests/testing/mochitest/browser
366: Main Thread] WARNING: '!CanSend() || !mManager || !mManager->CanSend()', file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/dom/ipc/jsactor/JSWindowActorChild.cpp:44
352: Main Thread] WARNING: Scrolled rect smaller than scrollport?: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/layout/generic/nsGfxScrollFrame.cpp:7147
334: Main Thread] WARNING: NS_ENSURE_TRUE(aFolder) failed: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/comm/mailnews/db/msgdb/src/nsMsgDatabase.cpp:504
313: Main Thread] WARNING: NS_ENSURE_TRUE(root) failed: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/layout/base/nsDocumentViewer.cpp:2618
289: Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005 (NS_ERROR_FAILURE): file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/dom/base/nsContentUtils.cpp:4033
251: Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005 (NS_ERROR_FAILURE): file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/dom/security/nsCSPService.cpp:190
251: Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005 (NS_ERROR_FAILURE): file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/chrome/nsChromeRegistry.cpp:180
248: Main Thread] WARNING: NS_ENSURE_TRUE(!mHasOrHasHadOwnerWindow || mOwnerWindow) failed: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/dom/events/DOMEventTargetHelper.cpp:306
227: Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80550006: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/comm/mailnews/local/src/nsMailboxService.cpp:617
227: Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80550006: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/comm/mailnews/base/src/nsMsgDBFolder.cpp:4651
224: Socket Thread] WARNING: cannot post event if not initialized: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/netwerk/protocol/http/nsHttpConnectionMgr.cpp:198
219: Main Thread] WARNING: Fallback to BasicLayerManager: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/dom/ipc/BrowserChild.cpp:2833
200: Main Thread] WARNING: NS_ENSURE_TRUE(frame) failed: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/comm/mailnews/base/src/nsMsgWindow.cpp:78
141: Main Thread] WARNING: 'aOwner->IsDiscarded()', file /NEW-SSD/moz-obj-dir/objdir-tb3/dist/include/mozilla/dom/SyncedContextInlines.h:95
134: Main Thread] WARNING: 'NS_FAILED(rv)', file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/netwerk/base/nsSimpleURI.cpp:618
126: Main Thread] WARNING: eContextMenu events with eNormal trigger should use secondary mouse button: 'mButton == MouseButton::eSecondary', file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/widget/WidgetEventImpl.cpp:665
112: Main Thread] WARNING: NS_ENSURE_TRUE(identity) failed: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/comm/mailnews/base/src/nsMsgIncomingServer.cpp:1835

This warning is very common in Firefox as well.

(In reply to Timothy Nikkel (:tnikkel) from comment #5)

This warning is very common in Firefox as well.

Thank you for the clarification.
Then I take it that this is not a serious situation, but known rare cases where the normal larger-than relation no longer holds.

If so, I wonder if we can create a macro which prints "INFO:" instead of "WARNING:" for these
not-so-serious, but the-developer-will-be-better-informed-about-the-real-world-situation-if-we-print-the-instance-of-rare-case-processing messages.
I would be more comfortable with INFO: as in

...  Main Thread] INFO: Scrolled rect smaller than scrollport?: file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/layout/generic/nsGfxScrollFrame.cpp:7154

I probably can ignore the message thinking that this serves its purpose to those who develop the code in question and not of general concern to those who is producing patches and is trying to make sure his/her patches do not break FF/TB. (Come to think of it,
if patches break FF/TB, the rare situations may happen more often and so we need to pay attention to them anyway. Hmm.)

In any case, we may want to reduce the number of "WARNING:" messages somehow to make the debug test log more useful IMHO.
If it means we swap some of "WARNING:" messages to "INFO:" messages, I will be fine.

Just my 2 cents worth.

Yeah, I don't think it's that important, if it was more serious I would expect it to be an NS_ASSERTION or fatal MOZ_ASSERT.

I agree that the amount of debug spam (including this warning) is too much and we should try to reduce it.

(In reply to Timothy Nikkel (:tnikkel) from comment #7)

Yeah, I don't think it's that important, if it was more serious I would expect it to be an NS_ASSERTION or fatal MOZ_ASSERT.

I agree that the amount of debug spam (including this warning) is too much and we should try to reduce it.

Hear, hear. :-)

This can happen on regular content (I see it when loading google.com on
a debug build for example). Given there's no action to take it seems
only noise atm. No strong opinion into whether it's better to ifdef the
code or just remove it.

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/33ecdf62e4d9 Remove a warning that nobody is looking into. r=tnikkel
See Also: → 1765966
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 101 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: