Bug 1695139 - Remove a warning that nobody is looking into. r=tnikkel

This can happen on regular content (I see it when loading google.com on
a debug build for example). Given there's no action to take it seems
only noise atm. No strong opinion into whether it's better to ifdef the
code or just remove it.

Differential Revision: https://phabricator.services.mozilla.com/D144415